# rag-system

./: README.md  install_requirements.py  mkdocs.yml  pyproject.toml
scripts/: pdf_to_mongodb_converter_script.py
source/: app.py  settings_loader.py
source/api/auth/: __init__.py  simple_authentication.py
source/api/exception_handler/: __init__.py  response_exception_handler.py
source/api/routes/: __init__.py  auth_routes.py  greeting_routes.py  knowledgebase_routes.py  model_response_routes.py
source/db/: mongodb_manager.py
source/model/: agent.py  model_loader.py  prompt_builder_for_marvin.py  prompt_builder_for_phi_4.py  prompt_builder_for_search_answer_in_context_agent.py  system_prompt_loader.py
source/preprocess/: keywords_generator.py  mongodb_to_vector_converter_script.py  text_preprocessor.py  vector_creator.py
source/rag/: document_retrieval.py  user_chat_history.py
source/system_prompts/: prompt_compare_question_and_context.txt  rag_prompt.txt
source/test_environment/: automated_question_testing.py  langsmith_client.py
